--- a/css/carousel.css
+++ b/css/carousel.css
@@ -97,3 +97,7 @@ body {font-family: Verdana, sans-serif; margin:0}
 @media only screen and (max-width: 300px) {
   .prev, .next,.text {font-size: 11px}
 }
+
+#carousel-table tr td {
+  width: 33%;
+}
