--- a/css/iframe.css
+++ b/css/iframe.css
@@ -1,14 +1,16 @@
 #wrap {
-    width: 1200px;
-    height: 1000px;
+    max-height: 600px;
+    width: 850px;
     padding: 0;
     overflow: hidden;
+
 }
 
-#frame {
-    width: 1200px;
-    height: 1000px;
+#frame { 
+    height: 600px;
+    width: 850px;
     border: 1px solid black;
+    display: inline;
 }
 
 #frame {
