Fixed pages showing wrong title. Moved repeated JS script into main.js. Made image carousel, navbar and footer load from main.js

--- a/css/carousel.css
+++ b/css/carousel.css
@@ -98,6 +98,7 @@ body {font-family: Verdana, sans-serif; margin:0}
   .prev, .next,.text {font-size: 11px}
 }
 
-#carousel-table tr td {
+/* Needs to be on each page otherwise doesn't work when running live on github pages */
+/* #carousel-table tr td {
   width: 33%;
-}
+} */
